[gd_scene load_steps=7 format=2]

[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/font_header.tres" type="DynamicFont" id=2]
[ext_resource path="res://RootScene/ScenarioSelector.gd" type="Script" id=3]
[ext_resource path="res://RootScene/CustomOfficerSetup.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.376471 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.376471 )

[node name="ScenarioSelector" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "SELECT_SCENARIO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScenarioContainer" type="ScrollContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = 64.0
margin_right = -8.0
margin_bottom = -8.0
custom_styles/bg = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenarios" type="VBoxContainer" parent="ScenarioContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FactionContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 64.0
margin_right = -16.0
margin_bottom = -64.0
custom_styles/bg = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Factions" type="VBoxContainer" parent="FactionContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -56.0
margin_right = -16.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
text = "CONFIRM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -272.0
margin_top = -56.0
margin_right = -148.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomOfficers" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -56.0
margin_bottom = -16.0
grow_vertical = 0
disabled = true
text = "CUSTOM_OFFICERS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomOfficerSetup" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="CustomOfficers" to="." method="_on_CustomOfficers_pressed"]
